--- a/dhcpcd.conf
+++ b/dhcpcd.conf
@@ -47,7 +47,7 @@ require dhcp_server_identifier
 # OR generate Stable Private IPv6 Addresses based from the DUID
 #slaac private
 
-#denyinterfaces eth0,eth1
+denyinterfaces eth0,eth1
 
 noipv6rs
 waitip 6
