Remove unneeded contents

--- a/dhcpcd.conf
+++ b/dhcpcd.conf
@@ -47,6 +47,7 @@ require dhcp_server_identifier
 # OR generate Stable Private IPv6 Addresses based from the DUID
 #slaac private
 
+# Don not handle these interfaces since they are only members of a bridge
 denyinterfaces eth0,eth1
 
 noipv6rs
@@ -58,9 +59,10 @@ waitip 6
 interface eth2
 ipv6rs
 iaid 1
-# use the interface connected to your LAN
-#ia_pd 1 br-lan
+
+# use the interface connected to your LAN, you need to change the prefix /64 to what your ISP provides to you
 ia_pd 1/::/64 br-lan/0/64
 
+# Set static ipv4 for bridge
 interface br-lan
 static ip_address=192.168.6.1/24
