Enable icmp for ping

--- a/nftables.conf
+++ b/nftables.conf
@@ -13,7 +13,7 @@ table inet global {
         # However, it also lets probes discover this host is alive.
         # This sample accepts them within a certain rate limit:
         #
-        # icmp type echo-request limit rate 5/second accept
+        icmp type echo-request limit rate 5/second accept
 
         # allow local connection
         ct state established,related accept;
