Add echo-request for icmpv6

--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -19,7 +19,7 @@ table inet global {
         ct state established,related accept;
 
         # needed by ipv6 config
-        icmpv6 type {nd-neighbor-advert, nd-neighbor-solicit, nd-router-advert} accept;
+        icmpv6 type {nd-neighbor-advert, nd-neighbor-solicit, nd-router-advert, echo-request} accept;
         meta nfproto ipv6 udp dport 546 accept;
     }
 
