Do not wait for ip assigned. Suppose the condition: the router is powerd on without WAN connection. If that happens, dhcpcd will exit after waitting for minutes and failing to request a ip address. Then even if you connect your cable to WAN port, the router won't get ip address anymore because dhcpcd is already died.

--- a/dhcpcd/etc/dhcpcd.conf
+++ b/dhcpcd/etc/dhcpcd.conf
@@ -51,7 +51,7 @@ require dhcp_server_identifier
 denyinterfaces eth0,eth1
 
 noipv6rs
-waitip 6
+#waitip 6
 # Uncomment this line if you are running dhcpcd for IPv6 only.
 #ipv6only
 
