Allow another wireguard interface

--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -4,7 +4,8 @@ flush ruleset
 
 define DEV_PRIVATE = br-lan
 define DEV_WORLD = eth2
-define DEV_WIREGUARD = wg0
+define DEV_WIREGUARD_WORLD = wg0
+define DEV_WIREGUARD_INTRANET = wg1
 
 table inet global {
 
@@ -21,6 +22,7 @@ table inet global {
         # needed by ipv6 config
         icmpv6 type {nd-neighbor-advert, nd-neighbor-solicit, nd-router-advert, echo-request} accept;
         meta nfproto ipv6 udp dport 546 accept;
+        meta nfproto {ipv4, ipv6} udp dport 41441 accept;
     }
 
     chain inbound_private {
@@ -34,7 +36,7 @@ table inet global {
         ct state vmap { established : accept, related : accept, invalid : drop }
 
         # allow loopback traffic, anything else jump to chain for further evaluation
-        iifname vmap { lo : accept, $DEV_WORLD : jump inbound_world, $DEV_PRIVATE : accept , $DEV_WIREGUARD : accept }
+        iifname vmap { lo : accept, $DEV_WORLD : jump inbound_world, $DEV_PRIVATE : accept , $DEV_WIREGUARD_WORLD : accept, $DEV_WIREGUARD_INTRANET : accept }
 
         # the rest is dropped by the above policy
     }
