Allow forward from intranet wireguard device. We use this router as a wireguard "server", so this is mandatory.

--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -50,6 +50,7 @@ table inet global {
         # connections from the internal net to the internet or to other
         # internal nets are allowed
         iifname $DEV_PRIVATE accept
+        iifname $DEV_WIREGUARD_INTRANET accept
 
         # the rest is dropped by the above policy
     }
