--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -22,8 +22,6 @@ table inet global {
         # needed by ipv6 config
         icmpv6 type {nd-neighbor-advert, nd-neighbor-solicit, nd-router-advert, echo-request} accept;
         meta nfproto ipv6 udp dport 546 accept;
-
-        # needed to accept wireguard connections
         meta nfproto {ipv4, ipv6} udp dport 41441 accept;
     }
 
@@ -52,13 +50,17 @@ table inet global {
         # connections from the internal net to the internet or to other
         # internal nets are allowed
         iifname $DEV_PRIVATE accept
-
-        # connections from the wireguard device to the internet or vice versa are allowed. This is mandatory when acted as a "server" of wireguard setup
         iifname $DEV_WIREGUARD_INTRANET accept
 
         # the rest is dropped by the above policy
     }
+}
 
+
+table ip ipv4-nat
+delete table ip ipv4-nat
+
+table ip ipv4-nat {
     chain postrouting {
         type nat hook postrouting priority 100; policy accept;
 
