Add noarp option to avoid arp failure

--- a/dhcpcd/etc/dhcpcd.conf
+++ b/dhcpcd/etc/dhcpcd.conf
@@ -1,6 +1,8 @@
 # A sample configuration for dhcpcd.
 # See dhcpcd.conf(5) for details.
 
+noarp
+
 # Allow users of this group to interact with dhcpcd via the control socket.
 #controlgroup wheel
 
