--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -65,6 +65,23 @@ table ip ipv4-nat
 delete table ip ipv4-nat
 
 table ip ipv4-nat {
+    set redirlist {
+        type ipv4_addr
+        flags interval
+        size 65535
+        counter
+        auto-merge
+        elements = {
+            91.105.192.0/23,
+        }
+    }
+
+    chain gfwlist-redirect {
+        type nat hook prerouting priority -100; policy accept;
+
+        ip daddr @redirlist ip protocol tcp counter redirect to :1100
+    }
+
     chain postrouting {
         type nat hook postrouting priority 100; policy accept;
 
