Expand redirect support to ipv6

--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -58,13 +58,6 @@ table inet global {
 
         # the rest is dropped by the above policy
     }
-}
-
-
-table ip ipv4-nat
-delete table ip ipv4-nat
-
-table ip ipv4-nat {
 
     set redirlist {
         type ipv4_addr
@@ -77,11 +70,33 @@ table ip ipv4-nat {
         }
     }
 
+    set redirlistv6 {
+        type ipv6_addr
+        flags interval
+        size 65535
+        counter
+        auto-merge
+        elements = {
+            2a00:1450:400a:808::200e,
+        }
+    }
+
+
     chain gfwlist-redirect {
         type nat hook prerouting priority -100; policy accept;
 
         ip daddr @redirlist ip protocol tcp counter redirect to :1100
+
+        ip6 daddr @redirlistv6 meta l4proto tcp counter redirect to :1100
     }
+
+}
+
+
+table ip ipv4-nat
+delete table ip ipv4-nat
+
+table ip ipv4-nat {
 
     chain postrouting {
         type nat hook postrouting priority 100; policy accept;
