--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -82,7 +82,7 @@ table inet global {
     }
 
 
-    chain gfwlist-redirect {
+    chain list-redirect {
         type nat hook prerouting priority -100; policy accept;
 
         ip daddr @redirlist ip protocol tcp counter redirect to :1100
