--- a/dhcpcd/etc/dhcpcd.conf
+++ b/dhcpcd/etc/dhcpcd.conf
@@ -62,7 +62,7 @@ interface eth2
 ipv6rs
 iaid 1
 
-# use the interface connected to your LAN, you need to change the prefix /64 to what your ISP provides to you
+# use the interface connected to your LAN, you can change the prefix less than the default 64 if your ISP supports
 ia_pd 1/::/64 br-lan/0/64
 
 # Set static ipv4 for bridge
