Changes for nanopi r4s, which has only one LAN and one WAN port

--- a/dhcpcd/etc/dhcpcd.conf
+++ b/dhcpcd/etc/dhcpcd.conf
@@ -50,7 +50,7 @@ require dhcp_server_identifier
 #slaac private
 
 # Don not handle these interfaces since they are only members of a bridge
-denyinterfaces eth0,eth1
+denyinterfaces eth0
 
 noipv6rs
 #waitip 6
@@ -58,7 +58,7 @@ noipv6rs
 #ipv6only
 
 # use the interface connected to WAN
-interface eth2
+interface eth1
 ipv6rs
 iaid 1
 
@@ -67,4 +67,4 @@ ia_pd 1/::/64 br-lan/0/64
 
 # Set static ipv4 for bridge
 interface br-lan
-static ip_address=192.168.6.1/24
+static ip_address=192.168.8.1/24
