Add ULA support.
1) Local ipv6 for all the clients in LAN, which change less often when
   compared to universal WAN ipv6 address;
2) If dhcpcd fails to assign new PD to br-lan when ISP changes PD, ULA
   can help you still be accessible to ipv6 Internet (not tested enough though).

--- a/dhcpcd/etc/dhcpcd.conf
+++ b/dhcpcd/etc/dhcpcd.conf
@@ -68,3 +68,4 @@ ia_pd 1/::/64 br-lan/0/64
 # Set static ipv4 for bridge
 interface br-lan
 static ip_address=192.168.6.1/24
+static ip6_address=fd8b:4b10:15d8:9b10::1/64
