--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -6,6 +6,7 @@ define DEV_PRIVATE = br-lan
 define DEV_WORLD = eth2
 define DEV_WIREGUARD_WORLD = wg0
 define DEV_WIREGUARD_INTRANET = wg1
+define IPV6_ULA_BLOCK = fd8b:4b10:15d8:9b10::/64
 
 table inet global {
 
@@ -86,7 +87,6 @@ table inet global {
 
 }
 
-
 table ip ipv4-nat
 delete table ip ipv4-nat
 
@@ -97,5 +97,18 @@ table ip ipv4-nat {
 
         # masquerade private IP addresses
         oifname $DEV_WORLD masquerade
+    }
+}
+
+table ip ipv6-nat
+delete table ip ipv6-nat
+
+table ip6 ipv6-nat {
+
+    chain postrouting {
+        type nat hook postrouting priority 100; policy accept;
+
+        # masquerade only on ULA IP addresses
+        ip6 saddr $IPV6_ULA_BLOCK meta oifname $DEV_WORLD masquerade
     }
 }
