Add counter to masquerade, which can help us see the traffic through NAT

--- a/nftables/etc/nftables.conf
+++ b/nftables/etc/nftables.conf
@@ -96,7 +96,7 @@ table ip ipv4-nat {
         type nat hook postrouting priority 100; policy accept;
 
         # masquerade private IP addresses
-        oifname $DEV_WORLD masquerade
+        oifname $DEV_WORLD counter masquerade
     }
 }
 
@@ -109,6 +109,6 @@ table ip6 ipv6-nat {
         type nat hook postrouting priority 100; policy accept;
 
         # masquerade only on ULA IP addresses
-        ip6 saddr $IPV6_ULA_BLOCK meta oifname $DEV_WORLD masquerade
+        ip6 saddr $IPV6_ULA_BLOCK meta oifname $DEV_WORLD counter masquerade
     }
 }
